@@ -78,6 +78,7 @@ The documentation pages are [here](http://www.itthinx.com/documentation/document
 = 1.4.0 =
 * WordPress 4.7.2 compatibility tested.
 * Improved handling of number of documents shown for Documents widget.
+* Added the [documentation_categories] shortcode.
 
 The full changelog is available at https://github.com/itthinx/documentation/blob/master/changelog.txt
 
